fix: margins on small screens

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,6 +6,6 @@
 
 @media screen and (max-width: 540px) {
   .header {
-    padding: 14px 0 24px;
+    padding: 30px 0;
   }
 }
