--- a/blocks/main/__img/main__img.css
+++ b/blocks/main/__img/main__img.css
@@ -6,6 +6,6 @@
 
 @media screen and (max-width: 540px) {
   .main__img {
-    margin-bottom: 24px;
+    margin-bottom: 30px;
   }
 }
