--- a/blocks/main/__paragraph/main__paragraph.css
+++ b/blocks/main/__paragraph/main__paragraph.css
@@ -7,6 +7,6 @@
 
 @media screen and (max-width: 540px) {
   .main__paragraph {
-    margin-bottom: 24px;
+    margin-bottom: 30px;
   }
 }
