--- a/blocks/main/__title/main__title.css
+++ b/blocks/main/__title/main__title.css
@@ -9,6 +9,6 @@
 
 @media screen and (max-width: 540px) {
   .main__title {
-    margin-bottom: 24px;
+    margin-bottom: 30px;
   }
 }
